Kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workplanner
  template:
    metadata:
      labels:
        app: workplanner
    spec:
      containers:
        - name: workplanner
          image: webappsregistryal.azurecr.io/workplanner
          ports:
          - containerPort: 5000
