Kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
    name: api-service
spec:
    type: NodePort
    ports:
    - port: 5000
      targetPort: 5000
    selector:
        app: workplanner
