Kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: workplannerapp
  ports:
  - port: 80
    targetPort: 80
