Kubernetes/kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spa-and-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: workplanner.francecentral.cloudapp.azure.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: api-service
          servicePort: 5000
      - path: /
        backend:
          serviceName: app-service
          servicePort: 80
